--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,3 +18,5 @@ Suggests:
     renv,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+URL: https://github.com/swsoyee/rPackageTutorial
+BugReports: https://github.com/swsoyee/rPackageTutorial/issues
